--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-load-plugins": "~0.8.0",
     "gulp-util": "^3.0.6",
     "gulp-webserver": "~0.9.0",
+    "jshint": "^2.8.0",
     "reqwest": "^2.0.1",
     "run-sequence": "~1.0.2",
     "superagent": "^1.3.0",
