--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "del": "~1.1.1",
+    "glob": "^5.0.14",
     "gulp": "^3.9.0",
     "gulp-livereload": "^3.8.0",
     "gulp-load-plugins": "~0.8.0",
@@ -26,5 +27,10 @@
     "superagent": "^1.3.0",
     "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0"
+  },
+  "devDependencies": {
+    "chai": "^3.2.0",
+    "gulp-inject-reload": "0.0.2",
+    "mocha": "2.2.5"
   }
 }
