--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "webpack-dev-server": "^1.9.0"
   },
   "devDependencies": {
+    "batch": "~0.2.1",
     "chai": "^3.2.0",
+    "debug": "~0.7.0",
     "gulp-inject-reload": "0.0.2",
     "mocha": "2.2.5",
-    "webdriverio": "^3.1.0",
-    "debug": "~0.7.0",
-    "batch": "~0.2.1"
+    "phantomjs": "^1.9.18",
+    "selenium-standalone": "^4.5.3",
+    "webdriverio": "^3.1.0"
   }
 }
