the e2e tests are starting to shape up

--- a/acceptance_test/e2e-tests.yml
+++ b/acceptance_test/e2e-tests.yml
@@ -13,6 +13,7 @@ seleniumfirefox:
         - sitea:sitea.com
         - siteb:siteb.com
         - inbox:inbox.activitystream.com
+        - cdn:cdn.activitystream.com
 
 e2etest:
     build: tests
