--- a/acceptance_test/tests/Dockerfile
+++ b/acceptance_test/tests/Dockerfile
@@ -4,13 +4,13 @@ FROM mhart/alpine-node
 # FROM mhart/alpine-node
 
 WORKDIR /src
-ADD . .
-
+ADD package.json ./
 # If you have native dependencies, you'll need extra tools
 # RUN apk-install make gcc g++ python
 
 # If you need npm, use mhart/alpine-node or mhart/alpine-iojs
 RUN npm install
+ADD . .
 
 # If you had native dependencies you can now remove build tools
 # RUN apk del make gcc g++ python && \
