--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "debug": "~0.7.0",
     "gulp-inject-reload": "0.0.2",
     "mocha": "2.2.5",
+    "moment": "^2.10.6",
     "phantomjs": "^1.9.18",
     "selenium-standalone": "^4.5.3",
     "webdriverio": "^3.1.0"
