--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Activitystream",
   "license": "MIT",
   "dependencies": {
+    "cookies-js": "^1.2.2",
     "del": "~1.1.1",
     "glob": "^5.0.14",
     "gulp": "^3.9.0",
