fixing the readme

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "asa",
   "version": "1.0.0",
-  "description": "Activitystream Analytics",
+  "description": "Activity Stream Analytics data sumbission library",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
