--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mocha": "2.2.5",
     "moment": "^2.10.6",
     "phantomjs": "^1.9.18",
+    "restify": "^4.0.3",
     "selenium-standalone": "^4.5.3",
     "webdriverio": "^3.1.0"
   }
