--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "reqwest": "^2.0.1",
     "run-sequence": "~1.0.2",
     "superagent": "^1.3.0",
+    "underscore": "^1.8.3",
     "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0"
   },
