--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "asa",
-  "version": "1.0.0",
+  "name": "@activitystream/asa",
+  "version": "2.0.0",
   "description": "Activity Stream Analytics data sumbission library",
-  "main": "src/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "browser": "dist/asa.min.js",
+  "main": "dist/asa.cjs",
+  "module": "dist/asa.es",
+  "private": true,
+  "repository": {
+    "url": "git@github.com:activitystream/asa.js.git"
   },
-  "keywords": [
-    "activitystream",
-    "analytics",
-    "realtime"
-  ],
+  "scripts": {
+    "test": "rollup -c --environment TEST -w",
+    "build": "rollup -c --environment PRODUCTION",
+    "start": "rollup -c --environment DEVELOPMENT -w",
+    "postinstall": "npm run build"
+  },
+  "keywords": ["activitystream", "analytics", "realtime"],
   "author": "Activitystream",
   "license": "MIT",
   "dependencies": {
-    "cookies-js": "^1.2.2",
-    "del": "~1.1.1",
-    "glob": "^5.0.14",
-    "gulp": "^3.9.0",
-    "gulp-livereload": "^3.8.0",
-    "gulp-load-plugins": "~0.8.0",
-    "gulp-util": "^3.0.6",
-    "gulp-webserver": "~0.9.0",
-    "jshint": "^2.8.0",
-    "reqwest": "^2.0.1",
-    "run-sequence": "~1.0.2",
-    "superagent": "^1.3.0",
-    "underscore": "^1.8.3",
-    "webpack": "^1.9.10",
-    "webpack-dev-server": "^1.9.0"
+    "promise-polyfill": "^7.1.2",
+    "whatwg-fetch": "^2.0.4",
+    "rollup": "^0.58.2",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-json": "^2.3.0",
+    "rollup-plugin-livereload": "^0.6.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.2.1",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-serve": "^0.4.2",
+    "rollup-plugin-typescript2": "^0.13.0",
+    "rollup-plugin-uglify": "^3.0.0",
+    "typescript": "^2.8.3"
   },
   "devDependencies": {
-    "batch": "~0.2.1",
-    "chai": "^3.2.0",
-    "debug": "~0.7.0",
-    "gulp-inject-reload": "0.0.2",
-    "mocha": "2.2.5",
-    "moment": "^2.10.6",
-    "phantomjs": "^1.9.18",
-    "restify": "^4.0.3",
-    "selenium-standalone": "^4.5.3",
-    "webdriverio": "^3.1.0"
+    "@types/chai": "^4.1.2",
+    "@types/mocha": "^5.2.0",
+    "@types/sinon": "^4.3.3",
+    "@types/source-map-support": "^0.4.0",
+    "chai": "^4.1.2",
+    "mocha": "^5.1.1",
+    "sinon": "^5.0.7",
+    "source-map-support": "^0.5.5"
   }
 }
