update e2e test env: add nightwatch, add rollup to support es6 in tests, add asa.js as npm module to cdn, add vnc viewer for display, centralize constants in a config file

--- a/e2e/cdn/Dockerfile
+++ b/e2e/cdn/Dockerfile
@@ -1,19 +1,15 @@
-FROM mhart/alpine-node
-# FROM mhart/alpine-node-base:0.10
-# FROM mhart/alpine-iojs-base
-# FROM mhart/alpine-node
+FROM mhart/alpine-node:8
 
 WORKDIR /src
 ADD . .
 
 # If you have native dependencies, you'll need extra tools
-# RUN apk-install make gcc g++ python
+RUN apk add --no-cache make gcc g++ python git
 
-# If you need npm, use mhart/alpine-node or mhart/alpine-iojs
 RUN npm install
 
 # If you had native dependencies you can now remove build tools
-# RUN apk del make gcc g++ python && \
-#   rm -rf /tmp/* /root/.npm /root/.node-gyp
+RUN apk del make gcc g++ python git && \
+    rm -rf /tmp/* /root/.npm /root/.node-gyp
 EXPOSE 80
 CMD PORT=80 node index.js
