--- a/e2e/inbox/package.json
+++ b/e2e/inbox/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "restify": "^3.0.3",
-    "restify-cookies": "^0.1.2"
+    "restify": "^7.2.0",
+    "restify-cookies": "^0.2.5",
+    "restify-cors-middleware": "^1.1.0"
   }
 }
