--- a/e2e/package.json
+++ b/e2e/package.json
@@ -19,7 +19,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@activitystream/asa": "https://github.com/activitystream/asa.js.git#asaV2",
+    "@activitystream/asa":
+      "https://github.com/activitystream/asa.js.git#asaV2split",
     "@novnc/novnc": "^1.0.0",
     "ansi-to-html": "^0.6.4",
     "chai": "^4.1.2",
