--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@activitystream/asa",
-  "version": "2.0.0",
+  "version": "1.1.77",
   "description": "Activity Stream Analytics data sumbission library",
   "browser": "dist/asa.min.js",
   "main": "dist/asa.cjs",
@@ -12,16 +12,31 @@
   "scripts": {
     "test": "rollup -c --environment TEST -w",
     "build": "rollup -c --environment PRODUCTION",
-    "start": "rollup -c --environment DEVELOPMENT -w",
-    "postinstall": "npm run build"
+    "start": "rollup -c --environment DEVELOPMENT -w"
   },
-  "keywords": ["activitystream", "analytics", "realtime"],
+  "keywords": [
+    "activitystream",
+    "analytics",
+    "realtime"
+  ],
   "author": "Activitystream",
   "license": "MIT",
   "dependencies": {
     "promise-polyfill": "^7.1.2",
-    "whatwg-fetch": "^2.0.4",
+    "whatwg-fetch": "^2.0.4"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.1.2",
+    "@types/mocha": "^5.2.0",
+    "@types/sinon": "^4.3.3",
+    "@types/source-map-support": "^0.4.0",
+    "@types/whatwg-fetch": "0.0.33",
+    "chai": "^4.1.2",
+    "mocha": "^5.1.1",
+    "sinon": "^5.0.7",
+    "source-map-support": "^0.5.5",
     "rollup": "^0.58.2",
+    "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-livereload": "^0.6.0",
@@ -31,16 +46,8 @@
     "rollup-plugin-serve": "^0.4.2",
     "rollup-plugin-typescript2": "^0.13.0",
     "rollup-plugin-uglify": "^3.0.0",
-    "typescript": "^2.8.3"
-  },
-  "devDependencies": {
-    "@types/chai": "^4.1.2",
-    "@types/mocha": "^5.2.0",
-    "@types/sinon": "^4.3.3",
-    "@types/source-map-support": "^0.4.0",
-    "chai": "^4.1.2",
-    "mocha": "^5.1.1",
-    "sinon": "^5.0.7",
-    "source-map-support": "^0.5.5"
+    "typescript": "^2.8.3",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0"
   }
 }
