--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "git@github.com:activitystream/asa.js.git"
   },
   "scripts": {
-    "test": "rollup -c --environment TEST -w",
+    "test": "rollup -c --environment TEST",
     "build": "rollup -c --environment PRODUCTION",
     "start": "rollup -c --environment DEVELOPMENT -w"
   },
@@ -31,10 +31,12 @@
     "@types/sinon": "^4.3.3",
     "@types/source-map-support": "^0.4.0",
     "@types/whatwg-fetch": "0.0.33",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "chai": "^4.1.2",
+    "isomorphic-fetch": "^2.2.1",
     "mocha": "^5.1.1",
-    "sinon": "^5.0.7",
-    "source-map-support": "^0.5.5",
+    "puppeteer": "^1.4.0",
     "rollup": "^0.58.2",
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-commonjs": "^9.1.3",
@@ -46,8 +48,8 @@
     "rollup-plugin-serve": "^0.4.2",
     "rollup-plugin-typescript2": "^0.13.0",
     "rollup-plugin-uglify": "^3.0.0",
-    "typescript": "^2.8.3",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0"
+    "sinon": "^5.0.7",
+    "source-map-support": "^0.5.5",
+    "typescript": "^2.8.3"
   }
 }
