--- a/package.json
+++ b/package.json
@@ -14,11 +14,7 @@
     "build": "rollup -c --environment PRODUCTION",
     "start": "rollup -c --environment DEVELOPMENT -w"
   },
-  "keywords": [
-    "activitystream",
-    "analytics",
-    "realtime"
-  ],
+  "keywords": ["activitystream", "analytics", "realtime"],
   "author": "Activitystream",
   "license": "MIT",
   "dependencies": {
@@ -34,7 +30,6 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "chai": "^4.1.2",
-    "isomorphic-fetch": "^2.2.1",
     "mocha": "^5.1.1",
     "puppeteer": "^1.4.0",
     "rollup": "^0.58.2",
