--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "license": "MIT",
   "dependencies": {
     "promise-polyfill": "^7.1.2",
-    "whatwg-fetch": "^2.0.4"
+    "whatwg-fetch": "^2.0.4",
+    "whatwg-url": "^6.4.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.2",
