add types for product/order data on events, add controlled variant of e2e tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "experimentalDecorators": true
   },
   "include": ["src/**/*"],
-  "exclude": ["build", "node_modules", "rollup.config.js"],
+  "exclude": ["build", "node_modules/**/*", "rollup.config.js"],
   "typeRoots": ["./node_modules/@types", "./src"]
 }
