--- a/e2e/package.json
+++ b/e2e/package.json
@@ -29,6 +29,7 @@
     "rollup": "^0.59.1",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-serve": "^0.4.2",
     "socket.io": "^2.1.1"
   }
