--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "build": "rollup -c --environment PRODUCTION",
     "start": "rollup -c --environment DEVELOPMENT -w"
   },
-  "keywords": ["activitystream", "analytics", "realtime"],
+  "keywords": [
+    "activitystream",
+    "analytics",
+    "realtime"
+  ],
   "author": "Activitystream",
   "license": "MIT",
   "dependencies": {
@@ -26,7 +30,7 @@
     "@types/chai": "^4.1.2",
     "@types/mocha": "^5.2.0",
     "@types/sinon": "^4.3.3",
-    "@types/source-map-support": "^0.4.0",
+    "@types/source-map-support": "^0.4.1",
     "@types/whatwg-fetch": "0.0.33",
     "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
@@ -46,8 +50,8 @@
     "rollup-plugin-serve": "^0.4.2",
     "rollup-plugin-typescript2": "^0.13.0",
     "rollup-plugin-uglify": "^3.0.0",
-    "sinon": "^5.0.7",
+    "sinon": "^5.0.10",
     "source-map-support": "^0.5.5",
-    "typescript": "^2.8.3"
+    "typescript": "^2.9.1"
   }
 }
