--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "browser": "dist/asa.min.js",
   "main": "dist/asa.cjs",
   "module": "dist/asa.es",
-  "private": true,
+  "private": false,
   "repository": {
     "url": "git@github.com:activitystream/asa.js.git"
   },
