--- a/e2e/docker-compose.yml
+++ b/e2e/docker-compose.yml
@@ -1,36 +1,36 @@
 inbox:
-    build: inbox
-    ports:
-        - 6050:80
+  build: inbox
+  ports:
+    - 6050:80
 
 cdn:
-    build: cdn
-    ports:
-        - 6053:80
+  build: cdn
+  ports:
+    - 6053:80
 
 sitea:
-    build: sitea
-    ports:
-        - 6051:80
+  build: sitea
+  ports:
+    - 6051:80
 
 siteb:
-    build: siteb
-    ports:
-        - 6052:80
+  build: siteb
+  ports:
+    - 6052:80
 
-selenium: 
-    image: selenium/standalone-chrome-debug
-    environment:
-        - VNC_NO_PASSWORD=1
-    links:
-        - "sitea:sitea.com"
-        - "siteb:siteb.com"
-        - "inbox:inbox.activitystream.com"
-        - "cdn:cdn.activitystream.com"
-    ports:
-        - 8000:8000
-        - 5900:5900
-        - 4444:4444
+selenium:
+  image: selenium/standalone-chrome-debug
+  environment:
+    - VNC_NO_PASSWORD=1
+  links:
+    - "sitea:sitea.com"
+    - "siteb:siteb.com"
+    - "inbox:inbox2.activitystream.com"
+    - "cdn:cdn.activitystream.com"
+  ports:
+    - 8000:8000
+    - 5900:5900
+    - 4444:4444
 
 # seleniumfirefox:
 #     image: selenium/standalone-firefox-debug
