--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "outDir": "build",
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "strict": true
   },
   "include": ["src/**/*"],
   "exclude": ["build", "node_modules/**/*", "rollup.config.js"],
