--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "Activitystream",
   "license": "MIT",
   "dependencies": {
+    "@types/chai-subset": "^1.3.1",
     "promise-polyfill": "^7.1.2",
     "whatwg-fetch": "^2.0.4",
     "whatwg-url": "^6.4.1"
@@ -37,6 +38,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015-rollup": "^3.0.0",
     "chai": "^4.1.2",
+    "chai-subset": "^1.6.0",
     "mocha": "^5.1.1",
     "puppeteer": "^1.4.0",
     "rollup": "^0.58.2",
