--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
   "license": "MIT",
   "dependencies": {
     "@types/chai-subset": "^1.3.1",
+    "@types/cors": "^2.8.4",
+    "@types/express": "^4.16.0",
+    "@types/whatwg-url": "^6.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
     "promise-polyfill": "^7.1.2",
     "whatwg-fetch": "^2.0.4",
-    "whatwg-url": "^6.4.1"
+    "whatwg-url": "^7.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.2",
@@ -54,6 +59,7 @@
     "rollup-plugin-uglify": "^3.0.0",
     "sinon": "^5.0.10",
     "source-map-support": "^0.5.5",
-    "typescript": "^3.2.1"
+    "ts-node": "^7.0.1",
+    "typescript": "^3.2.2"
   }
 }
