--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,11 @@
 {
   "presets": [
     [
-      "env",
+      "@babel/env",
       {
+        "forceAllTransforms": true,
         "modules": false
       }
     ]
-  ],
-  "plugins": ["external-helpers"]
+  ]
 }
