--- a/e2e/package.json
+++ b/e2e/package.json
@@ -10,7 +10,7 @@
     "docker:up": "sudo docker-compose up -d inbox cdn sitea siteb selenium",
     "docker:down": "sudo docker-compose down",
     "docker:build": "sudo docker-compose build --no-cache",
-    "prebuild": "sudo service docker start && npm run docker:down",
+    "prebuild": "sudo systemctl start docker && npm run docker:down",
     "build": "npm run docker:build",
     "build:local": "rm -rf ./cdn/dist && cp -r ../dist ./cdn/dist && npm run build",
     "postbuild": "npm run docker:up",
