--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@types/chai-subset": "^1.3.1",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
+    "@types/node-fetch": "^2.1.4",
     "@types/whatwg-url": "^6.4.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "node-fetch": "^2.3.0",
     "promise-polyfill": "^7.1.2",
     "whatwg-fetch": "^2.0.4",
     "whatwg-url": "^7.0.0"
