--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "git@github.com:activitystream/asa.js.git"
   },
   "scripts": {
-    "test": "rollup -c --environment TEST",
+    "test": "jest",
     "build": "rollup -c --environment PRODUCTION",
     "start": "rollup -c --environment DEVELOPMENT -w"
   },
@@ -25,6 +25,7 @@
     "@types/chai-subset": "^1.3.1",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
+    "@types/jest": "^23.3.12",
     "@types/node-fetch": "^2.1.4",
     "@types/whatwg-url": "^6.4.0",
     "cors": "^2.8.5",
@@ -46,8 +47,9 @@
     "babel-preset-es2015-rollup": "^3.0.0",
     "chai": "^4.1.2",
     "chai-subset": "^1.6.0",
+    "jest": "^23.6.0",
+    "jest-junit": "^6.0.1",
     "mocha": "^5.1.1",
-    "puppeteer": "^1.4.0",
     "rollup": "^1.1.0",
     "rollup-plugin-babel": "^4.3.0",
     "rollup-plugin-commonjs": "^9.2.0",
@@ -61,6 +63,7 @@
     "rollup-plugin-uglify": "^6.0.1",
     "sinon": "^5.0.10",
     "source-map-support": "^0.5.5",
+    "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2"
   }
