--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/mocha": "^5.2.0",
     "@types/sinon": "^4.3.3",
     "@types/source-map-support": "^0.4.1",
+    "@types/supertest": "^2.0.7",
     "@types/whatwg-fetch": "0.0.33",
     "babel-preset-es2015-rollup": "^3.0.0",
     "chai": "^4.1.2",
@@ -63,6 +64,7 @@
     "rollup-plugin-uglify": "^6.0.1",
     "sinon": "^5.0.10",
     "source-map-support": "^0.5.5",
+    "supertest": "^3.4.1",
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2"
